<resources>
    <string name="app_name">ActivengLab</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync_now">Sync now</string>
    <string name="detail_action_calibration">Calibration</string>
    <string name="detail_action_edit">Edit</string>
    <string name="detail_action_program">Program</string>
    <string name="detail_action_delete">Delete</string>

    <string name="title_activity_settings">Settings</string>

    <string name="hello_world">Waiting sensor data...</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_location_text">Location</string>
    <string name="pref_default_location_text">Carnaxide, Portugal</string>

    <string name="pref_title_temperature_unit">Unit</string>
    <string-array name="pref_temperature_unit_titles">
        <item>Celsius (centigrade)</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="pref_temperature_unit_values">
        <item>C</item>
        <item>F</item>
        <item>K</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Remote synchronization</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_remote_url">Remote URL</string>
    <string name="pref_default_remote_url">http://192.168.1.94:3000/direct</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_calibration">CalibrationActivity</string>

    <string name="secure_connect">Connect</string>
    <string name="disconnect">Disonnect</string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_activity_edit">Edit</string>

    <!-- copy and paste do BlunoBasicDemo -->
    <!--<string name="app_name">BlunoBasicDemo</string>-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <!--<string name="action_settings">Action settings</string>-->
</resources>
