<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="activeng.pt.activenglab.DetailActivity">
    <item
        android:id="@+id/detail_action_calibration"
        android:orderInCategory="100"
        android:title="@string/detail_action_calibration"
        app:showAsAction="never"/>
    <item
        android:id="@+id/detail_action_edit"
        android:orderInCategory="100"
        android:title="@string/detail_action_edit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/detail_action_delete"
        android:orderInCategory="100"
        android:title="@string/detail_action_delete"
        app:showAsAction="never"/>

</menu>
